--- a/Test.html
+++ b/Test.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>The Norther White Rhino</title>
+    <title>The Northern White Rhino</title>
       <h1 class ="colorred textcenter">Endangered animals</h1>
   </head>
   <body>
