--- a/Test.html
+++ b/Test.html
@@ -49,7 +49,7 @@
           <br>
           if you don't want these kind of animals going extinct, you should really go to the site i am mentioning,
           <br>
-          either to find information or you can donate to an organosation which helps highly endangered animals.
+          either to find information or you can donate to an organisation which helps highly endangered animals.
           <br>
           <li><a href ="https://www.savetherhino.org/get-involved/donate/">Donate</a></li>
           <li><a href ="https://en.wikipedia.org/wiki/Northern_white_rhinoceros">Info</a></li>
