--- a/Test.html
+++ b/Test.html
@@ -11,11 +11,11 @@
       <p class ="Text-align:center">
         Some animals are common, like ants you almost see them everywhere.
         <br>
-        there are also animals that are very uncommon, for example "The Northern White Rhino", for example the one under here.
+        but there are also animals that are very uncommon, for example "The Northern White Rhino", you can see a picture of one of the 2 left on earth under here.
         <br><br>
         <img src ="The Northern White Rhino.jpg" alt ="A Northern White Rhino">
         <br><br>
-        there are only a few left on the earth, so we need to pay attention to these animals and try to save them.
+        there are only a 2 left on the earth, so we need to pay attention to these animals and try to save them.
         <br>
         These animals are not only dying, there also going extinct.
         <br>
@@ -44,6 +44,10 @@
           <li>Gorilla</li>
           <li>Tasmanian Devil</li>
           <li>Orangutan</li>
+          <br>
+          for more info about these.
+          <br>
+          <li><a href ="https://www.britannica.com/list/10-of-the-most-famous-endangered-species"> Info</a></li>
           <br>
           These animals are also highly endangered, these animals are also going extinct
           <br>
