--- a/Test.html
+++ b/Test.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="utf-8">
     <title>The Northern White Rhino</title>
-      <h1 class ="colorred textcenter">Endangered animals</h1>
+    <img width="350" heigth="350" src ="Logo.png" alt ="Logo">
   </head>
   <body>
       <div id="Endangered-Animals">
       <p class ="Text-align:center">
-        Some animals are common, like ants you almost see them everywhere.
+        Some animals are common, like ants you see them almost everywhere.
         <br>
         but there are also animals that are very uncommon, for example "The Northern White Rhino", you can see a picture of one of the 2 left on earth under here.
         <br><br>
         <img src ="The Northern White Rhino.jpg" alt ="A Northern White Rhino">
         <br><br>
-        there are only a 2 left on the earth, so we need to pay attention to these animals and try to save them.
+        there are only a 2 left on the earth (Najin and Fatu), so we need to pay attention to these animals and try to save them.
         <br>
         These animals are not only dying, there also going extinct.
         <br>
@@ -34,16 +34,16 @@
               Orangutan
              -->
         <p> of course there are other Endagered Animals out there as well, we have:
-          <li>Giant Panda</li>
-          <li>Tiger</li>
-          <li>Whooping Crane</li>
-          <li>Bleu Whale</li>
-          <li>Asian Elephant</li>
-          <li>Sea Otter</li>
-          <li>Snow Leopard</li>
-          <li>Gorilla</li>
-          <li>Tasmanian Devil</li>
-          <li>Orangutan</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Giant_pandaGiant">Giant Panda</a></li>
+          <li><a href ="https://en.wikipedia.org/wiki/Tiger">Tiger</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Whooping_crane">Whooping Crane</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Blue_whale">Bleu Whale</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Asian_elephant">Asian Elephant</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Sea_otter">Sea Otter</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Snow_leopard">Snow Leopard</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Gorilla">Gorilla</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Tasmanian_devil">Tasmanian Devil</li>
+          <li><a href ="https://en.wikipedia.org/wiki/Orangutan">Orangutan</li>
           <br>
           for more info about these.
           <br>
@@ -59,7 +59,7 @@
           <li><a href ="https://en.wikipedia.org/wiki/Northern_white_rhinoceros">Info</a></li>
           </p>
 <div id ="Video">
-        <video width ="1000" controls ="controls">
+        <video width ="1000" controls>
           <source src ="The Northern White Rhino.mp4" video ="web/mp4">
         </div>
   </body>
